kubernetes/apps/cluster-traffic/gateways/base/lab-ehakan-dev-gw.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: lab-ehakan-dev-gw
  namespace: projectcontour
  annotations:
    cert-manager.io/clusterissuer: cf-letsencrypt-ehakan-dev
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      hostname: lab.ehakan.dev
      port: 443
      protocol: HTTPS
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: lab-ehakan-dev-gw-tls
